[project]
name = "pyorbital"
dynamic = ["version"]
description = "Scheduling satellite passes in Python"
authors = [
    { name = "The Pytroll Team", email = "pytroll@googlegroups.com" }
]
dependencies = ["numpy>=1.19.0",
                "scipy",
                "requests",
                "defusedxml",
                "pyproj>=3.7.1",
                ]
readme = "README.md"
requires-python = ">=3.10"
license = {file = "LICENSE.txt"}
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Astronomy"
]

[project.scripts]
"fetch_tles.py" = "pyorbital.fetch_tles:run"
fetch_tles = "pyorbital.fetch_tles:run"

[project.urls]
"Documentation" = "https://pyorbital.readthedocs.io/en/latest/"

[project.optional-dependencies]
doc = ["sphinx", "sphinx_rtd_theme", "sphinxcontrib-apidoc"]
test = [
    "dask>=2025.3.0",
    "pytest>=8.3.5",
    "xarray>=2025.3.1",
]

[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["pyorbital"]

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.hooks.vcs]
version-file = "pyorbital/version.py"

[tool.isort]
sections = ["FUTURE", "STDLIB", "THIRDPARTY", "FIRSTPARTY", "LOCALFOLDER"]
profile = "black"
skip_gitignore = true
default_section = "THIRDPARTY"
known_first_party = "pyorbital"
line_length = 120

[tool.ruff]
line-length = 120
extend-exclude = ["pyorbital/tests/SGP4-VER.TLE"]

[tool.ruff.lint]
# See https://docs.astral.sh/ruff/rules/
# In the future, add "B", "S", "N"
select = ["A", "D", "E", "W", "F", "I", "PT", "TID", "C90", "Q", "T10", "T20", "NPY"]

[tool.ruff.lint.per-file-ignores]
"pyorbital/tests/*" = ["S101"]  # assert allowed in tests
"pyorbital/version.py" = ["D100", "Q000"]  # automatically generated by hatch-vcs
"pyorbital/tlefile.py" = ["T201", "T203"]  # allow print and pprint
"pyorbital/geoloc.py" = ["T201"]  # allow print
"pyorbital/geoloc_example.py" = ["T201"]  # allow print
"pyorbital/orbital.py" = ["T201"]  # allow print


[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.mccabe]
# Unlike Flake8, default to a complexity level of 10.
max-complexity = 10

[tool.coverage.run]
relative_files = true
omit = ["pyorbital/version.py"]

[tool.pytest.ini_options]
filterwarnings = [
    "error",
    "ignore:numpy.ndarray size changed:RuntimeWarning",
]
